changed logo source for header and footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="flex menu">.</div>
           <a class ="flex-item" href="s1.html">Work</a>
           <div class= "flex item">
-            <img src="images/logo.png" alt="Logo" />
+            <img src="images/Logo.png" alt="Logo" />
           </div>
           <a class="flex-item" href="s1.html">Shop</a>
           <div class="flex menu">.</div>
@@ -126,7 +126,7 @@
   <section>
     <!--Footer-->
         <div class="logofoot">
-          <img src="images/logo.png" alt="Logo" />
+          <img src="images/Logo.png" alt="Logo" />
         </div>
   </section>
 </footer>
